fix(持久化模块): 修复Bean排序工具类BUG